welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: Missing closing brace `}' assumed here
def marquerSol() {baisseBrosse();leveBrosse()}
^MethodsPicture:1: error: expected class or object definition
def marquerSol() {baisseBrosse();leveBrosse()}
^MethodsPicture:3: error: expected class or object definition
def faireV(c:Color) {setCouleurBrosse(c:Color);avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();gauche()}
^MethodsPicture:5: error: expected class or object definition
def motif1() {
^MethodsPicture:12: error: expected class or object definition
def transition1() {
^MethodsPicture:16: error: expected class or object definition
def motif2() {
^